--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,12 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
 server.port=8085
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=walid.aariche2001@gmail.com
+spring.mail.password=hhqy idwq jawu qdkr
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
